# rust_video_server

./: .gitignore  Cargo.toml  config.yml
perf_test/: locust.py
src/: main.rs
