[package]
name = "video_process_server"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
memchr = "2.7.5"
